Snap Cursor not working after changing Add Object tool settings #93732

Closed
opened 2021-12-06 03:35:06 +01:00 by Germano Cavalcante · 5 comments

Blender Version
Broken: 3.0

Short description of error
When changing the Add Object Tool snap settings, if we disable the tool and try to drag drop an object in 3D View, the snap cursor will not appear and will not work.

Exact steps for others to reproduce the error

  • Activate the Add Object Tool
  • Change the Snap To setting
  • Disable the Add Object Tool
  • From the outliner, drag and drop any object into the scene.
**Blender Version** Broken: 3.0 **Short description of error** When changing the Add Object Tool snap settings, if we disable the tool and try to drag drop an object in 3D View, the snap cursor will not appear and will not work. **Exact steps for others to reproduce the error** - Activate the Add Object Tool - Change the `Snap To` setting - Disable the Add Object Tool - From the outliner, drag and drop any object into the scene.
Author
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii

This issue was referenced by 4c8b93c5c2

This issue was referenced by 4c8b93c5c2d9f9e1a0b9b5378858b66b427dee2e

This issue was referenced by 3d8dea9ff9

This issue was referenced by 3d8dea9ff92d242174613063527f4add98688bac
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Germano Cavalcante self-assigned this 2021-12-06 03:35:48 +01:00
Author
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93732
No description provided.